login with sign up are finished

--- a/BD_Projet_v-1-0-0/Views/Home/Index.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Home/Index.cshtml
@@ -141,7 +141,7 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<body>
+<body style="background-image: url('@Url.Content("~/images/bg.jpg")');">
 <div class="container-xl">
     <div class="table-responsive">
         <div class="table-wrapper">
