--- a/BD_Projet_v-1-0-0/Views/Home/SignUp.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Home/SignUp.cshtml
@@ -16,7 +16,7 @@
     
 
 	</head>
-	<body class="img js-fullheight" style="background-image: url('@Url.Content("~/images/bg.jpg")');">
+	<body>
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -60,10 +60,9 @@
 	</section>
 
 	<script src="~/js/jquery.min.js"></script>
-  <script src="~/js/popper.js"></script>
-  <script src="~/js/bootstrap.min.js"></script>
-  <script src="~/js/main.js"></script>
-  
+	<script src="~/js/popper.js"></script>
+	<script src="~/js/bootstrap.min.js"></script>
+	<script src="~/js/main.js"></script>
 
 	</body>
 </html>
