--- a/BD_Projet_v-1-0-0/Views/Home/LogIn.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Home/LogIn.cshtml
@@ -1,7 +1,8 @@
+@model User
+
 @{
     ViewData["Title"] = "Login";
 }
-@model User
 
 <!doctype html>
 <html lang="en">
@@ -18,7 +19,7 @@
    
 
 	</head>
-	<body class="img js-fullheight" style="background-image: url('@Url.Content("~/images/bg.jpg")');">
+	<body>
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -36,7 +37,6 @@
 							</div>
 							<div class="form-group">
 								<input id="password-field" name="password"  type="password" class="form-control" placeholder="Password" required>
-								<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
 							</div>
 							<div class="form-group">
 								<button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
@@ -66,9 +66,9 @@
 	</section>
 
 	<script src="~/js/jquery.min.js"></script>
-  <script src="~/js/popper.js"></script>
-  <script src="~/js/bootstrap.min.js"></script>
-  <script src="~/js/main.js"></script>
+	<script src="~/js/popper.js"></script>
+	<script src="~/js/bootstrap.min.js"></script>
+	<script src="~/js/main.js"></script>
   
 
 	</body>
