--- a/BD_Projet_v-1-0-0/Views/Shared/_Layout.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Shared/_Layout.cshtml
@@ -8,26 +8,10 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BD_Projet_v_1_0_0.styles.css" asp-append-version="true" />
 </head>
-<body>
-    @* <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">K-Pop for All</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </nav>
-    </header> *@
+<body class="img js-fullheight" style="background-image: url('@Url.Content("~/images/bg.jpg")');">
     <main role="main">
             @RenderBody()
     </main>
-    @* <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - K-Pop for All - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
