--- a/BD_Projet_v-1-0-0/Views/Home/Index.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Home/Index.cshtml
@@ -2,16 +2,21 @@
 @model BD_Projet_v_1_0_0.Models.IndexViewModel
 
 @{
+    bool searchPerformed = ViewBag.SearchPerformed ?? false;
+    var url="searchTerm="+ViewBag.searchTermV;
+}
+
+@{
     int pageSize = 5;
     int pageNumber = !string.IsNullOrEmpty(ViewContext.HttpContext.Request.Query["page"]) ? Convert.ToInt32(ViewContext.HttpContext.Request.Query["page"]) : 1;
     var artistsOnCurrentPage = Model.artists.Skip((pageNumber - 1) * pageSize).Take(pageSize);
+    
 }
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Bootstrap Simple Data Table</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -20,6 +25,33 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- mobile metas -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+<!-- site metas -->
+<title>Musicm</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
+<meta name="author" content="">
+<!-- bootstrap css -->
+<link rel="stylesheet" type="text/css" href="~/css/css2/bootstrap.min.css">
+<!-- style css -->
+<link rel="stylesheet" type="text/css" href="~/css/css2/style.css">
+<!-- Responsive-->
+<link rel="stylesheet" href="~/css/css2/responsive.css">
+<!-- fevicon -->
+<link rel="icon" href="~/images/images2/fevicon.png" type="image/gif" />
+<!-- Scrollbar Custom CSS -->
+<link rel="stylesheet" href="~/css/css2/jquery.mCustomScrollbar.min.css">
+<!-- Tweaks for older IEs-->
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+<!-- owl stylesheets --> 
+<link href="https://fonts.googleapis.com/css?family=Orbitron:400,500,600,700|Poppins:400,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="~/css/css2/owl.carousel.min.css">
+<link rel="stylesoeet" href="~/css/css2/owl.theme.default.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 <style>
 body {
     color: #566787;
@@ -144,88 +176,162 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">K-Pop for All</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </nav>
-    </header>
     
-    <div class="container-xl position-absolute top-50 start-50 translate-middle">
-        <div class="table-responsive">
-            <div class="table-wrapper">
-                <div class="table-title">
-                    <div class="row">
-                        <div class="col-sm-8"><h2>Artists <b>Details</b></h2></div>
-                        <div class="col-sm-4">
-                            <form method="get" asp-action="Index" asp-controller="Home">
-                                <div class="search-box">
-                                    <i class="material-icons">&#xE8B6;</i>
-                                    <input type="text" class="form-control" name="searchTerm" placeholder="Search&hellip;">
+    <!--header section start -->
+      <div class="header_section">
+         <div class="container-fluid padding_0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+               <a class="logo" ><img src="~/images/images2/logo.png"></a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                     <li class="nav-item">
+                       <a class="nav-link" >Home</a>
+                     </li>
+                     <li class="nav-item">
+                       <a class="nav-link" href="#music">Artists</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#"><img src="~/images/images2/user-icon.png"> <span class="padding_left_10">LogOut</span></a>
+                     </li>
+                     
+                  </ul>
+               </div>
+            </nav>
+         </div>
+      </div>
+      <!-- header section end -->
+      <!-- banner section start -->
+      <div class="banner_section layout_padding"  class="img js-fullheight" style="background-image: url('@Url.Content("~/images/images2/banner-bg.png")');">
+         <div id="main_slider" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+               <div class="carousel-item active">
+                  <div class="container">
+                     <div class="banner_taital">
+                        <h1 class="banner_taital">Let’s start music</h1>
+                        <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration </p>
+                     </div>
+                     <h1 class="Music_text">Music</h1>
+                     <form class="example" method="get" asp-action="Index" asp-controller="Home">
+                       <input type="text" placeholder="Search.." name="searchTerm">
+                       <button type="submit"><i class="fa fa-search"></i></button>
+                     </form>
+                  </div>
+                  
+               </div>
+               
+            </div>
+            
+         </div>
+      </div>
+      <!-- banner section end -->
+      <!-- news section start -->
+      <div class="news_section layout_padding" id="music">
+         <div class="container">
+            <div class="news_taital_main">
+               <h1 class="latest_text">Artists Details</h1>
+               @* <div class="seemor_bt"><a href="#">See More</a></div> *@
+            </div>
+         </div>
+      </div>
+      @if (searchPerformed)
+        {
+            <script>
+                // JavaScript code to scroll to the element with ID "music"
+                document.addEventListener('DOMContentLoaded', function() {
+                    var musicElement = document.getElementById('music');
+                    if (musicElement) {
+                        musicElement.scrollIntoView({ behavior: 'smooth' });
+                    }
+                });
+                var currentUrl = window.location.href;
+                @url=currentUrl
+            </script>
+        }
+      <div class="news_section_2">
+         <div class="container">
+            <div class="down_arrow"><img src="~/images/images2/down-arrow.png"></div>
+            <div >
+                <div class="table-responsive">
+                    <div class="table-wrapper">
+                        <div class="table-title">
+                            <div class="row">
+                                <div class="col-sm-8"><h2>Artists <b>Details</b></h2></div>
+                                <div class="col-sm-4">
+                                    <form method="get" asp-action="Index" asp-controller="Home">
+                                        <div class="search-box">
+                                            <i class="material-icons">&#xE8B6;</i>
+                                            <input type="text" class="form-control" name="searchTerm" placeholder="Search&hellip;">
+                                        </div>
+                                    </form>
                                 </div>
-                            </form>
+                            </div>
+                        </div>
+                        <table class="table table-striped table-hover table-bordered">
+                            <thead>
+                                <tr>
+                                    <!-- Stage Name -->
+                                    <th> Stage Name </th>
+                                    <th> Full Name </th>
+                                    <th> Original group </i></th>
+                                    <th> Company </th>
+                                    <th> Gender </th>
+                                    <th> Actions </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var artist in artistsOnCurrentPage)
+                                {
+                                    <tr>
+                                        <td>@artist.Stage_Name</td>
+                                        <td>@artist.Full_Name</td>
+                                        <td>@artist.Original_group</td>
+                                        <td>@artist.Company</td>
+                                        <td>@artist.Gender</td>
+                                        <td>
+                                            <a href="#" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
+                                            @if (Model.userAuthentifie.username != "admin"){
+                                                <a href="#" class="favorite" title="favorite" data-toggle="tooltip"><i class="material-icons">favorite_border</i></a>
+                                            }
+                                            @if (Model.userAuthentifie.username == "admin"){
+                                                <a asp-controller="Artists" asp-action="Edit" asp-route-id="@artist.ID" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                                                <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                            }
+                                        </td>
+                                    </tr> 
+                                }
+                            </tbody>
+                        </table>
+                        <div class="clearfix">
+                            <div class="hint-text">Showing <b>@artistsOnCurrentPage.Count()</b> out of <b>@Model.artists.Count()</b> entries</div>
+                            <ul class="pagination">
+                                @for (int i = 1; i <= (int)Math.Ceiling((double)Model.artists.Count() / pageSize); i++)
+                                {
+                                    
+                                    <li class="page-item @(i == pageNumber ? "active" : "")">
+                                        <a href="?page=@i&@url" class="page-link">@i</a>
+                                         
+                                    </li>
+                                }
+                            </ul>
                         </div>
                     </div>
-                </div>
-                <table class="table table-striped table-hover table-bordered">
-                    <thead>
-                        <tr>
-                            <!-- Stage Name -->
-                            <th> Stage Name </th>
-                            <th> Full Name </th>
-                            <th> Original group </i></th>
-                            <th> Company </th>
-                            <th> Gender </th>
-                            <th> Actions </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var artist in artistsOnCurrentPage)
-                        {
-                            <tr>
-                                <td>@artist.Stage_Name</td>
-                                <td>@artist.Full_Name</td>
-                                <td>@artist.Original_group</td>
-                                <td>@artist.Company</td>
-                                <td>@artist.Gender</td>
-                                <td>
-                                    <a href="#" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                    @if (Model.userAuthentifie.username != "admin"){
-                                        <a href="#" class="favorite" title="favorite" data-toggle="tooltip"><i class="material-icons">favorite_border</i></a>
-                                    }
-                                    @if (Model.userAuthentifie.username == "admin"){
-                                        <a asp-controller="Artists" asp-action="Edit" asp-route-id="@artist.ID" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                        <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
-                                    }
-                                </td>
-                            </tr> 
-                        }
-                    </tbody>
-                </table>
-                <div class="clearfix">
-                    <div class="hint-text">Showing <b>@artistsOnCurrentPage.Count()</b> out of <b>@Model.artists.Count()</b> entries</div>
-                    <ul class="pagination">
-                        @for (int i = 1; i <= (int)Math.Ceiling((double)Model.artists.Count() / pageSize); i++)
-                        {
-                            <li class="page-item @(i == pageNumber ? "active" : "")">
-                                <a href="?page=@i" class="page-link">@i</a>
-                            </li>
-                        }
-                    </ul>
-                </div>
-            </div>
-        </div>  
-    </div> 
+                </div>  
+            </div> 
+         </div>
 
     <footer class="border-top footer text-muted position-absolute bottom-0">
         <div class="container">
             &copy; 2023 - K-Pop for All - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>  
+    </footer> 
+    <script>
+    function search() {
+        var searchTerm = $('#searchInput').val();
+        window.location.href = '?search=' + searchTerm; // Update the URL with the search parameter
+    }
+</script> 
 </body>
 </html>
