--- a/BD_Projet_v-1-0-0/Views/Home/LogIn.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Home/LogIn.cshtml
@@ -15,12 +15,12 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	<link rel="stylesheet" href="~/css/style.css">
+	<link rel="stylesheet" href="~/css/style.css" >
    
 
 	</head>
-	<body>
-	<section class="ftco-section">
+	<body class="img js-fullheight" style="background-image: url('@Url.Content("~/images/bg.jpg")');">
+	<section class="ftco-section" >
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
