--- a/BD_Projet_v-1-0-0/Views/Home/SignUp.cshtml
+++ b/BD_Projet_v-1-0-0/Views/Home/SignUp.cshtml
@@ -16,7 +16,7 @@
     
 
 	</head>
-	<body>
+	<body class="img js-fullheight" style="background-image: url('@Url.Content("~/images/bg.jpg")');">
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
